// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainLayout should render menu items that match claims {"SQR": [Object]} 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": [Function],
        "meta": Object {
          "menuItem": true,
        },
        "path": "allot",
      },
    ],
    "component": [Function],
    "meta": Object {
      "activator": true,
      "activatorName": "Sound Quality Reporting",
      "auth": Object {
        "roles": Array [
          "SQR.coordinator",
        ],
      },
      "menuIcon": "fas fa-headphones",
    },
    "path": "sqr/",
  },
]
`;

exports[`MainLayout should render menu items that match claims {"TE": [Object]} 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "roles": Array [
              "TE.editor",
              "TE.coordinator",
            ],
          },
          "menuItem": true,
          "menuLinkName": "My Tasks",
        },
        "path": "my",
      },
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "roles": Array [
              "TE.editor",
              "TE.coordinator",
            ],
          },
          "homePageLink": Object {
            "text": "Upload",
          },
          "menuItem": true,
        },
        "path": "upload",
      },
      Object {
        "component": [Function],
        "meta": Object {
          "auth": Object {
            "roles": Array [
              "TE.checker",
              "TE.editor",
              "TE.coordinator",
            ],
          },
          "menuItem": false,
        },
        "path": "tasks/:taskId",
      },
    ],
    "component": [Function],
    "meta": Object {
      "activator": true,
      "activatorName": "Track Editing",
      "menuIcon": "fas fa-cut",
    },
    "path": "te/",
  },
]
`;
